[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Level Editor/Control.gd" type="Script" id=2]
[ext_resource path="res://textures/coin.png" type="Texture" id=3]
[ext_resource path="res://single tiles/tileset_6.png" type="Texture" id=4]
[ext_resource path="res://single tiles/tileset_8.png" type="Texture" id=5]
[ext_resource path="res://single tiles/tileset_2.png" type="Texture" id=6]
[ext_resource path="res://single tiles/tileset_7.png" type="Texture" id=7]
[ext_resource path="res://single tiles/tileset_3.png" type="Texture" id=8]
[ext_resource path="res://single tiles/tileset_5.png" type="Texture" id=9]
[ext_resource path="res://single tiles/tileset_1.png" type="Texture" id=10]
[ext_resource path="res://single tiles/tileset_4.png" type="Texture" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.41422
margin_right = 1.41418
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor\'s Scene" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 187.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_bottom = 114.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Button" parent="Panel/VBoxContainer"]
margin_top = 9.0
margin_right = 188.0
margin_bottom = 79.0
text = "SELECT TILES"
icon = ExtResource( 1 )

[node name="icon3" type="Button" parent="Panel/VBoxContainer"]
margin_top = 83.0
margin_right = 188.0
margin_bottom = 105.0
icon = ExtResource( 3 )

[node name="Tree" type="ItemList" parent="Panel"]
visible = false
anchor_left = -0.00540541
anchor_top = 0.324667
anchor_right = 1.0
anchor_bottom = 0.96
margin_top = 0.199997
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select Music" type="Button" parent="Panel/VBoxContainer2"]
margin_right = 188.0
margin_bottom = 20.0
text = "Select Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select Background2" type="Button" parent="Panel/VBoxContainer2"]
margin_top = 24.0
margin_right = 188.0
margin_bottom = 44.0
text = "Select Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/VBoxContainer2"]
margin_top = 48.0
margin_right = 188.0
margin_bottom = 68.0
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="WindowDialog" parent="."]
visible = true
margin_left = 180.0
margin_top = 97.25
margin_right = 570.0
margin_bottom = 373.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PopupPanel"]
margin_top = 2.0
margin_right = 389.0
margin_bottom = 26.0
placeholder_text = "SET NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SAVE_BUTTON" type="Button" parent="PopupPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = -20.0
margin_right = 21.5
text = "SAVE"

[node name="PopupPanel2" type="WindowDialog" parent="."]
visible = true
margin_left = 180.0
margin_top = 97.25
margin_right = 570.0
margin_bottom = 373.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="PopupPanel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 8.0
items = [ "BG 1", null, false, "BG 2", null, false, "BG 3", null, false, "BG 4", null, false, "BG 5", null, false, "BG 6", null, false, "BG 7", null, false ]

[node name="PopupPanel3" type="WindowDialog" parent="."]
visible = true
margin_left = 180.0
margin_top = 97.25
margin_right = 570.0
margin_bottom = 373.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicList" type="ItemList" parent="PopupPanel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 8.0
items = [ "Track 1", null, false, "Track 2", null, false, "Track 3", null, false, "Track 4", null, false, "Track 5", null, false, "Track 6", null, false, "Track 7", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetCurrentTile" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="SetCurrentTile"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile1_icecapzone" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_right = 1023.0
margin_bottom = 17.0
texture_normal = ExtResource( 10 )

[node name="Tile1_icecapzone2" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 21.0
margin_right = 1023.0
margin_bottom = 38.0
texture_normal = ExtResource( 6 )

[node name="Tile1_icecapzone3" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 42.0
margin_right = 1023.0
margin_bottom = 59.0
texture_normal = ExtResource( 8 )

[node name="Tile1_icecapzone4" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 63.0
margin_right = 1023.0
margin_bottom = 80.0
texture_normal = ExtResource( 11 )

[node name="Tile1_icecapzone5" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 84.0
margin_right = 1023.0
margin_bottom = 101.0
texture_normal = ExtResource( 9 )

[node name="Tile1_icecapzone6" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 105.0
margin_right = 1023.0
margin_bottom = 121.0
texture_normal = ExtResource( 4 )

[node name="Tile1_icecapzone7" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 125.0
margin_right = 1023.0
margin_bottom = 141.0
texture_normal = ExtResource( 7 )

[node name="Tile1_icecapzone8" type="TextureButton" parent="SetCurrentTile/VBoxContainer"]
margin_top = 145.0
margin_right = 1023.0
margin_bottom = 161.0
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="Panel/VBoxContainer/icon" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/icon3" to="." method="_on_icon3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Select Music" to="." method="_on_Select_Music_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Select Background2" to="." method="_on_Select_Background_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PopupPanel/SAVE_BUTTON" to="." method="_on_SAVE_BUTTON_pressed"]
[connection signal="item_selected" from="PopupPanel2/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="PopupPanel3/MusicList" to="." method="_on_MusicList_item_selected"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone" to="." method="_on_Tile1_icecapzone_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone2" to="." method="_on_Tile1_icecapzone2_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone3" to="." method="_on_Tile1_icecapzone3_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone4" to="." method="_on_Tile1_icecapzone4_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone5" to="." method="_on_Tile1_icecapzone5_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone6" to="." method="_on_Tile1_icecapzone6_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone7" to="." method="_on_Tile1_icecapzone7_pressed"]
[connection signal="pressed" from="SetCurrentTile/VBoxContainer/Tile1_icecapzone8" to="." method="_on_Tile1_icecapzone8_pressed"]
